@@ -3,6 +3,7 @@ BEEBEEP (Secure Lan Messanger)
 BeeBEEP 3.0.1
 - Workgroups
 - Accept connections only from workgroups (option)
+- Recently used User Status can be selected
 
 BeeBEEP 3.0.0
 - Fixed issue with "This app is preventing shutdown" in Windows
